--- a/機率與統計/離散機率分布.md
+++ b/機率與統計/離散機率分布.md
@@ -1,7 +1,8 @@
 # 離散機率分布(discrete_distributions)
+- 計算期望值與變異數
+- 計算各種動差(Moment)
 
 ## 1. 伯努利分布（Bernoulli Distribution）
-
 -   只有兩種結果：成功(1) 或 失敗(0)
 -   參數：p
 -   PMF：P(X=1)=p, P(X=0)=1-p
