--- a/最佳化/剃度下降法.md
+++ b/最佳化/剃度下降法.md
@@ -4,9 +4,9 @@
 
 ### 目標
 
-我們希望最小化： $ f(x)=x\^2+3x+2 $
+我們希望最小化： $$ f(x)=x\^2+3x+2 $$
 
-其導數為： $ f'(x)=2x+3 $
+其導數為： $$ f'(x)=2x+3 $$
 
 梯度下降法 ==> x(新) <-- x(舊) - (學習率)*(梯度) 
 
