--- a/最佳化/剃度下降法.md
+++ b/最佳化/剃度下降法.md
@@ -52,14 +52,26 @@ print("\n最佳解約為 x =", x)
 
 # ⭐ 二、多變量線性回歸：利用剃度下降法
 
-模型： \[ y = wx + b \]
+模型： 
 
-損失函數： \[ L = `\frac{1}{N}`{=tex}`\sum `{=tex}(wx+b-y)\^2 \]
+$$
+y = wx + b 
+$$
 
-梯度： \[ `\frac{\partial L}{\partial w}`{=tex} =
-`\frac{2}{N}`{=tex}`\sum `{=tex}x(wx+b-y) \] \[
+損失函數： 
+
+$$
+L = `\frac{1}{N}`{=tex}`\sum `{=tex}(wx+b-y)\^2 
+$$
+
+梯度： 
+
+$$
+\frac{\partial L}{\partial w} =
+`\frac{2}{N}`{=tex}`\sum x(wx+b-y) 
 `\frac{\partial L}{\partial b}`{=tex} =
-`\frac{2}{N}`{=tex}`\sum `{=tex}(wx+b-y) \]
+`\frac{2}{N}`{=tex}`\sum `{=tex}(wx+b-y) 
+$$
 
 ------------------------------------------------------------------------
 
