--- a/最佳化/剃度下降法.md
+++ b/最佳化/剃度下降法.md
@@ -68,9 +68,9 @@ $$
 
 $$
 \frac{\partial L}{\partial w} =
-`\frac{2}{N}`{=tex}`\sum x(wx+b-y) 
+`\frac{2}{N} \sum x(wx+b-y) 
 `\frac{\partial L}{\partial b}`{=tex} =
-`\frac{2}{N}`{=tex}`\sum `{=tex}(wx+b-y) 
+`\frac{2}{N} \sum(wx+b-y) 
 $$
 
 ------------------------------------------------------------------------
