--- a/最佳化/剃度下降法.md
+++ b/最佳化/剃度下降法.md
@@ -61,16 +61,16 @@ $$
 損失函數： 
 
 $$
-L = `\frac{1}{N}`{=tex}`\sum `{=tex}(wx+b-y)\^2 
+L = \frac{1}{N} \sum(wx+b-y)\^2 
 $$
 
 梯度： 
 
 $$
 \frac{\partial L}{\partial w} =
-`\frac{2}{N} \sum x(wx+b-y) 
-`\frac{\partial L}{\partial b}`{=tex} =
-`\frac{2}{N} \sum(wx+b-y) 
+\frac{2}{N} \sum x(wx+b-y) 
+\frac{\partial L}{\partial b}=
+\frac{2}{N} \sum(wx+b-y) 
 $$
 
 ------------------------------------------------------------------------
@@ -115,7 +115,7 @@ print("b =", b)
 
 ------------------------------------------------------------------------
 
-# ⭐ 三、可視化（選配）
+# ⭐ 三、可視化
 
 ``` python
 import matplotlib.pyplot as plt
@@ -128,12 +128,3 @@ plt.show()
 
 ------------------------------------------------------------------------
 
-# 📌 如需進階版
-
--   Momentum\
--   Adam\
--   學習率動畫\
--   3D 損失面可視化\
--   加入更多實作範例
-
-都可以告訴我，我可以幫你補上。
