--- a/最佳化/剃度下降法.md
+++ b/最佳化/剃度下降法.md
@@ -76,6 +76,10 @@ $$
 \frac{2}{N} \sum(wx+b-y) 
 $$
 
+梯度下降法 ==> 
+- w(新) <-- w(舊) - (學習率)*(dw梯度)
+- b(新) <-- b(舊) - (學習率)*(db梯度) 
+
 ------------------------------------------------------------------------
 
 ## ✅ Python 程式碼（線性回歸）
