--- a/最佳化/梯度下降法.md
+++ b/最佳化/梯度下降法.md
@@ -1,6 +1,6 @@
-# 剃度下降法（Gradient Descent）
+# 梯度下降法（Gradient Descent）
 
-## 📘 一、最基本的一維剃度下降法：最小化 f(x) = x² + 3x + 2
+## 📘 一、最基本的一維梯度下降法：最小化 f(x) = x² + 3x + 2
 
 ### 目標
 
@@ -50,7 +50,9 @@ print("\n最佳解約為 x =", x)
 
 ------------------------------------------------------------------------
 
-# ⭐ 二、多變量線性回歸：利用剃度下降法
+# ⭐ 二、線性回歸：利用剃度下降法
+
+模擬的資料: y = 3 * X + 5 + np.random.randn(50)
 
 模型： 
 
