--- a/最佳化/梯度下降法.md
+++ b/最佳化/梯度下降法.md
@@ -63,7 +63,7 @@ $$
 損失函數： 
 
 $$
-L = \frac{1}{N} \sum(預計值-真實值)\^2  = \frac{1}{N} \sum(wx+b-y)\^2 
+L = \frac{1}{N} \sum(預測值-真實值)\^2  = \frac{1}{N} \sum(wx+b-y)\^2 
 $$
 
 梯度： 
