--- a/最佳化/超參數優化.md
+++ b/最佳化/超參數優化.md
@@ -6,7 +6,7 @@
 - **Hyperopt** | TPE 
 
 
-## 什麼是貝葉斯最佳化（Bayesian Optimization）
+## 貝葉斯最佳化（Bayesian Optimization）
 貝葉斯最佳化是一種專門用來解 **黑箱函數最佳化（Black-box Optimization）** 的方法，特別適用於：
 - 函數不可微分
 - 計算成本昂貴（如深度學習訓練）
