--- a/最佳化/超參數優化.md
+++ b/最佳化/超參數優化.md
@@ -3,8 +3,19 @@
 - RandomizedSearchCV
 - Bayesian Optimization
 - **Optuna** | TPE（Tree-structured Parzen Estimator）
-- **Hyperopt** | TPE 
+  - [Optuna - A hyperparameter optimization framework](https://github.com/optuna/optuna)
+  - 201907 [Optuna: A Next-generation Hyperparameter Optimization Framework](https://arxiv.org/abs/1907.10902)
+  - makes use of different samplers such as grid search, random, bayesian, and evolutionary algorithms
+  - https://github.com/optuna/optuna-examples
+  - https://www.geeksforgeeks.org/machine-learning/optuna/
+  - https://zh-cn.optuna.org/
+  - https://github.com/optuna/optuna-dashboard
+  - https://github.com/optuna/optuna-mcp
+- **Hyperopt** | TPE
+  - [Hyperopt: Distributed Hyperparameter Optimization](https://github.com/hyperopt/hyperopt)
+  - https://github.com/hyperopt/hyperopt
 
+- https://www.geeksforgeeks.org/machine-learning/hyperparameter-tuning/
 
 ## 貝葉斯最佳化（Bayesian Optimization）
 貝葉斯最佳化是一種專門用來解 **黑箱函數最佳化（Black-box Optimization）** 的方法，特別適用於：
@@ -15,6 +26,8 @@
 它的核心精神是用 **機率模型（常為 Gaussian Process, GP）** 來代理未知的目標函數，並透過 **效用函數（Acquisition Function）** 來決定下一個最佳的採樣點。
 
 ---
+
+
 
 #### Bayesian Optimization 流程
 1. **初始化**：選定一些點，計算函數值  
