--- a/最佳化/超參數優化.md
+++ b/最佳化/超參數優化.md
@@ -2,6 +2,8 @@
 - GridSearchCV
 - RandomizedSearchCV
 - Bayesian Optimization
+  - [A Tutorial on Bayesian Optimization](https://arxiv.org/abs/1807.02811)
+  - https://www.geeksforgeeks.org/artificial-intelligence/bayesian-optimization-in-machine-learning/
 - **Optuna** | TPE（Tree-structured Parzen Estimator）
   - [Optuna - A hyperparameter optimization framework](https://github.com/optuna/optuna)
   - 201907 [Optuna: A Next-generation Hyperparameter Optimization Framework](https://arxiv.org/abs/1907.10902)
