--- a/最佳化/超參數優化.md
+++ b/最佳化/超參數優化.md
@@ -15,6 +15,7 @@
   - https://github.com/optuna/optuna-mcp
 - **Hyperopt** | TPE
   - [Hyperopt: Distributed Hyperparameter Optimization](https://github.com/hyperopt/hyperopt)
+  - 2015 [Hyperopt: A Python library for model selection and hyperparameter optimization](https://www.researchgate.net/publication/282814671_Hyperopt_A_Python_library_for_model_selection_and_hyperparameter_optimization)
   - https://github.com/hyperopt/hyperopt
 
 - https://www.geeksforgeeks.org/machine-learning/hyperparameter-tuning/
