--- a/機率與統計/常態分布.md
+++ b/機率與統計/常態分布.md
@@ -51,7 +51,7 @@ EX, VarX
 
 ## 📌 計算結果
 
-- 期望值：\( E[X] = \mu \)
-- 變異數：\( Var(X) = \sigma^2 \)
+- 期望值：$ E[X] = \mu $
+- 變異數：$ Var(X) = \sigma^2 $
 
 ---
