--- a/機率與統計/常態分布.md
+++ b/機率與統計/常態分布.md
@@ -7,7 +7,7 @@ $$
 ---
 
 ## 常態分布圖形
-
+- PDF
 ```python
 import matplotlib.pyplot as plt
 import numpy as np
@@ -18,16 +18,36 @@ mu = 0
 sigma = 1
 y = 1/(np.sqrt(2*np.pi)*sigma) * np.exp(-(x-mu)**2/(2*sigma**2))
 
+# 畫圖
 plt.figure()
 plt.plot(x, y)
 plt.xlabel("x")
 plt.ylabel("PDF")
 plt.title("Standard Normal Distribution")
 plt.grid(True)
-plt.savefig("/mnt/data/normal_distribution.png")
-plt.close()
 ```
+- CDF
+```python
+import matplotlib.pyplot as plt
+from scipy.stats import norm
+import numpy as np
 
+# Reuse the x-values from the previous plot
+x = np.linspace(-4, 4, 400)
+
+# Calculate the CDF using scipy.stats.norm.cdf
+# For a standard normal distribution (mu=0, sigma=1)
+cdf_values = norm.cdf(x, loc=0, scale=1)
+
+# 畫圖
+plt.figure()
+plt.plot(x, cdf_values)
+plt.xlabel("x")
+plt.ylabel("CDF")
+plt.title("Standard Normal Distribution CDF")
+plt.grid(True)
+plt.show()
+```
 ## 🧪 SymPy 推導程式碼
 
 ```python
