--- a/機率與統計/常態分布.md
+++ b/機率與統計/常態分布.md
@@ -8,6 +8,13 @@ $$
 
 ## 常態分布圖形
 - PDF
+- np.linspace(-4, 4, 400) 這段程式碼使用了 numpy 函式庫中的 linspace 函式:
+  - np.linspace: 這個函式用於在指定區間內，生成一系列等間距的數字陣列
+  - `-4`: 這是區間的起始值
+  - `4`: 這是區間的結束值。
+  - `400`: 這是 `num` 參數，指定要生成的樣本數量。在這個例子中，它會生成 400 個等間距的數字。
+  - `np.linspace(-4, 4, 400)` 會生成一個包含 400 個數字的陣列，這些數字均勻分佈在 -4 到 4 之間（包含 -4 和 4）。
+  - 這在繪製函式圖時經常用來創建 X 軸的數值。
 ```python
 import matplotlib.pyplot as plt
 import numpy as np
